# tecplot-tools

./: .gitignore  README.md  setup.cfg
examples/: create_hdf_for_tecplot.py  test.mcr
tecplot_tools/: hdf.py
