[metadata]
name = tecplot_tools
version = 0.0.1
author = Matthias Probst
author_email = matthias.probst@kit.edu
description = Helpful python tools to work with tecplot
long_description = file: README.md
long_description_content_type = text/markdown
url = hhttps://github.com/matthiasprobst/tecplot-tools
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
packages = find:
python_requires = !=3.8
include_package_data = True
install_requires =
    pytecplot
    numpy>=1.20
    h5py>=3.7.0